--- a/batcher/job_manager.ui
+++ b/batcher/job_manager.ui
@@ -33,25 +33,22 @@
      <widget class="QTextEdit" name="textEditJobInput"/>
     </item>
     <item>
-     <widget class="QPushButton" name="pushButtonAddJob">
-      <property name="text">
-       <string>Add Job</string>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <widget class="QPushButton" name="pushButtonRemoveJob">
-      <property name="text">
-       <string>Remove Selected Job</string>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <widget class="QPushButton" name="pushButtonStartExecution">
-      <property name="text">
-       <string>Start Execution</string>
-      </property>
-     </widget>
+     <layout class="QHBoxLayout" name="horizontalLayout">
+      <item>
+       <widget class="QPushButton" name="pushButtonAddJob">
+        <property name="text">
+         <string>Add Job</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="pushButtonRemoveJob">
+        <property name="text">
+         <string>Remove Selected Job</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
     </item>
     <item>
      <widget class="QListWidget" name="listWidgetJobs">
@@ -64,30 +61,16 @@
      </widget>
     </item>
     <item>
+     <widget class="QPushButton" name="pushButtonStartExecution">
+      <property name="text">
+       <string>Start Execution</string>
+      </property>
+     </widget>
+    </item>
+    <item>
      <widget class="QPlainTextEdit" name="plainTextEditResults"/>
     </item>
    </layout>
   </widget>
-  <widget class="QMenuBar" name="menubar">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>400</width>
-     <height>27</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QToolBar" name="toolBar">
-   <attribute name="toolBarArea">
-    <enum>TopToolBarArea</enum>
-   </attribute>
-   <attribute name="toolBarBreak">
-    <bool>false</bool>
-   </attribute>
-  </widget>
-  <widget class="QStatusBar" name="statusbar"/>
  </widget>
- <resources/>
- <connections/>
 </ui>
